v1.1.0 - first commit