@@ -6,7 +6,7 @@
 
     <groupId>it.miketan.pb.serializer</groupId>
     <artifactId>PB_SubsystemCustomizer</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <name>PB_SubsystemCustomizer</name>
 
     <properties>
@@ -81,6 +81,14 @@
     </dependencies>
 
     <build>
+        <!-- useful for read properties from maven -->
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+
         <plugins>
             <!-- Maven compiler goal -->
             <plugin>
@@ -88,8 +96,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
@@ -148,7 +157,6 @@
                             <mainClass>it.miketan.pb.serializer.Main</mainClass>
                         </manifest>
                     </archive>
-                    <includeProjectArtifacts>true</includeProjectArtifacts>
                     <attach>true</attach>
                 </configuration>
                 <executions>
